k8s/staging/workloads.yaml
# # # # # # # # # # # # # # # # # # # # # # # # # # # #
#                     RABBITMQ                        #
# # # # # # # # # # # # # # # # # # # # # # # # # # # #
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
spec:
  selector:
    matchLabels:
      app: rabbitmq
  replicas: 1
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management-alpine
          volumeMounts:
            - name: rabbitmq-persistent-storage
              mountPath: /var/lib/rabbitmq
      volumes:
        - name: rabbitmq-persistent-storage
          persistentVolumeClaim:
            claimName: rabbitmq-pvc
---

# # # # # # # # # # # # # # # # # # # # # # # # # # # #
#                ACCOUNT-SERVICE DATABASE             #
# # # # # # # # # # # # # # # # # # # # # # # # # # # #
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-service-db
spec:
  selector:
    matchLabels:
      app: account-service-db
  replicas: 1
  template:
    metadata:
      labels:
        app: account-service-db
    spec:
      containers:
        - name: account-service-db
          image: postgres:15.2
          volumeMounts:
            - name: account-service-db-persistent-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: account-service-db-persistent-storage
          persistentVolumeClaim:
            claimName: account-service-db-pvc

---
# # # # # # # # # # # # # # # # # # # # # # # # # # # #
#                ALERT-SERVICE DATABASE             #
# # # # # # # # # # # # # # # # # # # # # # # # # # # #
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alert-service-db
spec:
  selector:
    matchLabels:
      app: alert-service-db
  replicas: 1
  template:
    metadata:
      labels:
        app: alert-service-db
    spec:
      containers:
        - name: alert-service-db
          image: postgres:15.2
          volumeMounts:
            - name: alert-service-db-persistent-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: alert-service-db-persistent-storage
          persistentVolumeClaim:
            claimName: alert-service-db-pvc

---
# # # # # # # # # # # # # # # # # # # # # # # # # # # #
#                      GATEWAY                        #
# # # # # # # # # # # # # # # # # # # # # # # # # # # #
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
spec:
  selector:
    matchLabels:
      app: gateway
  replicas: 1
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: dreion/k8s-cso-gateway:release-0.0.1
---
# # # # # # # # # # # # # # # # # # # # # # # # # # # #
#                  ACCOUNT-MICROSERVICE               #
# # # # # # # # # # # # # # # # # # # # # # # # # # # #
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-microservice
spec:
  selector:
    matchLabels:
      app: account-microservice
  replicas: 1
  template:
    metadata:
      labels:
        app: account-microservice
    spec:
      containers:
        - name: account-microservice
          image: dreion/k8s-cso-account-microservice:release-0.0.1
---
# # # # # # # # # # # # # # # # # # # # # # # # # # # #
#                  ALERT-MICROSERVICE                 #
# # # # # # # # # # # # # # # # # # # # # # # # # # # #
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alert-microservice
spec:
  selector:
    matchLabels:
      app: alert-microservice
  replicas: 1
  template:
    metadata:
      labels:
        app: alert-microservice
    spec:
      containers:
        - name: alert-microservice
          image: dreion/k8s-cso-alert-microservice:release-0.0.1
---
# # # # # # # # # # # # # # # # # # # # # # # # # # # #
#                  PET-ALERT-SCRAPER                  #
# # # # # # # # # # # # # # # # # # # # # # # # # # # #
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pet-alert-scraper
spec:
  selector:
    matchLabels:
      app: pet-alert-scraper
  replicas: 1
  template:
    metadata:
      labels:
        app: pet-alert-scraper
    spec:
      containers:
        - name: pet-alert-scraper
          image: dreion/k8s-cso-pet-alert-scraper:release-0.0.1
