k8s/staging/service.yaml
# # # # # # # # # # # # # # # # # # # # # # # # # # # # #
# #                     ELASTICSEARCH                   #
# # # # # # # # # # # # # # # # # # # # # # # # # # # # #
# apiVersion: v1
# kind: Service
# metadata:
#   name: cso-elasticsearch
# spec:
#   selector:
#     app: elasticsearch
#   ports:
#     - protocol: TCP
#       port: 9200
#       targetPort: 9200
#   type: ClusterIP
# ---
# # # # # # # # # # # # # # # # # # # # # # # # # # # #
#                     RABBITMQ                        #
# # # # # # # # # # # # # # # # # # # # # # # # # # # #
apiVersion: v1
kind: Service
metadata:
  name: cso-rabbitmq
spec:
  selector:
    app: rabbitmq
  ports:
    - name: http
      port: 15672
    - name: endpoint
      port: 5672
  type: ClusterIP
 
---
# # # # # # # # # # # # # # # # # # # # # # # # # # # #
#                ACCOUNT-SERVICE DATABASE             #
# # # # # # # # # # # # # # # # # # # # # # # # # # # #
apiVersion: v1
kind: Service
metadata:
  name: cso-account-service-db
spec:
  selector:
    app: account-service-db
  ports:
    - name: endpoint
      port: 5432
  type: ClusterIP

---
# # # # # # # # # # # # # # # # # # # # # # # # # # # #
#                ALERT-SERVICE DATABASE               #
# # # # # # # # # # # # # # # # # # # # # # # # # # # #
apiVersion: v1
kind: Service
metadata:
  name: cso-alert-service-db
spec:
  selector:
    app: alert-service-db
  ports:
    - name: endpoint
      port: 5432
  type: ClusterIP

---
# # # # # # # # # # # # # # # # # # # # # # # # # # # #
#                     GATEWAY                         #
# # # # # # # # # # # # # # # # # # # # # # # # # # # #
apiVersion: v1
kind: Service
metadata:
  name: cso-gateway
spec:
  selector:
    app: gateway
  ports:
    - name: http
      port: 8080
  type: ClusterIP
---
# # # # # # # # # # # # # # # # # # # # # # # # # # # #
#                PETALERT-SCRAPER                     #
# # # # # # # # # # # # # # # # # # # # # # # # # # # #
apiVersion: v1
kind: Service
metadata:
  name: cso-pet-alert-scraper
spec:
  selector:
    app: pet-alert-scraper
  ports:
    - name: endpoint
      port: 3000
  type: ClusterIP

---
# # # # # # # # # # # # # # # # # # # # # # # # # # # #
#                     FRONTEND                        #
# # # # # # # # # # # # # # # # # # # # # # # # # # # #
apiVersion: v1
kind: Service
metadata:
  name: cso-frontend
spec:
  selector:
    app: frontend
  ports:
    - name: endpoint
      port: 80
  type: ClusterIP
