k8s/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
 
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: basic-routing
spec:
  ingressClassName: nginx
  rules:
    - host: garault.online
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: cso-gateway
                port:
                  number: 8080
    - host: garault.online
      http:
        paths:
          - path: /queue
            pathType: Prefix
            backend:
              service:
                name: cso-rabbitmq
                port:
                  number: 15672
